Fixed spacing issue on homepage

--- a/src/css/modules/featured.less
+++ b/src/css/modules/featured.less
@@ -1,7 +1,7 @@
 #featured {
     overflow: hidden;
-    padding: 0;
-    margin-bottom: 5rem;
+    margin: -1rem;
+    padding: 0 0 5rem 0;
 }
 
 .featured, .page-list {
@@ -32,8 +32,6 @@
 }
 
 .featured  {
-    margin: -1rem;
-
     a  {
         .listItemAnchor;
         text-align: left;
